# lytra

./: Cargo.toml  config.json  keypair.json
.github/workflows/: rust.yml
logs/: app.log.2024-06-16  app.log.2024-07-26  app.log.2024-07-27  app.log.2024-07-28  app.log.2024-07-29  app.log.2024-07-30
src/: config.rs  main.rs  tasks.rs  twitter.rs  ui.rs
