[package]
name = "sloppy-twitter"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
cookie = "0.18.1"
crossterm = "0.27.0"
rand = "0.8.5"
ratatui = "0.26.3"
regex = "1.10.5"
reqwest = { version = "0.12.4", features = ["json", "cookies"] }
reqwest_cookie_store = "0.8.0"
serde = "1.0.203"
serde_json = "1.0.117"
serde_urlencoded = "0.7.1"
solana-client = "1.18.16"
solana-sdk = "1.18.16"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
twitter-v2 = "0.1.8"
tmc-solana-engine = { path = "../tmc-solana-engine" }
tmc-solana-proto = { path = "../tmc-solana-proto" }
spl-token = "4.0.0"
machine-uid = "0.5.2"
